# mimoid

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
.claude/agents/: api-server-generator.md  database-documenter.md  db-architecture-generator.md  run-iterate-agent.md  seed-db-generator.md  tech-design-generator.md
mimiod/: __init__.py  seeder_base.py
mimoid/: __init__.py  schema_types.py  seeder_base.py
notes/: datasets.md
notes/deep-research/: find-datasets.prompt.md  find-datasets.report.md
projects/1password/: README.md  db_schema.py  main.py  seed_db.py  tech_design.md
projects/amadeus/: README.md  db_schema.py  main.py  openapi.yml  seed_db.py  tech_design.md
projects/digital_bank/: README.md  db_schema.py  input.md  main.py  seed_db.py  tech_design.md
projects/docusign/: README.md  db_schema.py  main.py  seed_db.py  tech_design.md
projects/edtech/: README.md  clean_duplicates.py  db_schema.py  fix_indexes.py  input.md  main.py  seed_db.py  tech_design.md  test_geographic_realism.py  test_geography.py  test_simple.py
projects/edtech_v2/: create_indexes.py  db_schema.py  main.py  seed_db.py  tech_design.md  test_connection.py  test_generation.py
projects/food_delivery/: README.md  db_schema.py  input.md  main.py  seed_db.py  tech_design.md
projects/martech/: README.md  db_schema.py  input.md  main.py  seed_db.py  tech_design.md
projects/steel_producer/: README.md  input.md  (+4 more)
steps/: 1_tech_design.md  2_db_architecture.md  3_seed_db.md  4_run_iterate.md  5_document.md
tests/: test_schema_types.py  test_seeder_base.py
